# contree

context_tree_rs/: .gitignore  README.md
context_tree_rs/.github/workflows/: release.yml
context_tree_rs/context_core/: Cargo.toml
context_tree_rs/context_core/src/: lib.rs
context_tree_rs/src-tauri/: Cargo.toml  tauri.conf.json
context_tree_rs/src-tauri/capabilities/: default.json
context_tree_rs/src-tauri/icons/: icon.icns
context_tree_rs/src-tauri/src/: main.rs
