[package]
name = "context-tree"
version = "0.1.0"
description = "Generador de contexto para IA - arbol de proyecto con lista negra"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
context_core = { path = "../context_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
